--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,20 @@
         <item>20423</item>
     </string-array>
 
+    <string name="lame_o_join">
+        INNER JOIN Address ON Address.Stu_ID = Student.Stu_ID
+        INNER JOIN Availability ON Availability.Stu_ID = Student.Stu_ID
+        INNER JOIN Availability_Weekday ON Availability_Weekday.Stu_ID = Student.Stu_ID
+        INNER JOIN Courses ON Courses.Stu_ID = Student.Stu_ID
+        INNER JOIN College ON College.C_ID = Courses.C_ID
+        INNER JOIN Communicates_Using ON Communicates_Using.Stu_ID= Student.Stu_ID
+        INNER JOIN Food ON Food.Stu_ID = Student.Stu_ID
+        INNER JOIN Groups on Groups.Stu_ID= Student.Stu_ID
+        INNER JOIN Interests ON Interests.Stu_ID= Student.Stu_ID
+        INNER JOIN Stu_Courses ON Stu_Courses.Stu_ID= Student.Stu_ID
+        INNER JOIN Transportation ON Transportation.Stu_ID= Student.Stu_ID
+        INNER JOIN Transportation_Preference  ON Transportation_Preference.Stu_ID= Student.Stu_ID</string>
+
 
 
 </resources>
