--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,7 +88,7 @@
         INNER JOIN Stu_Courses ON Stu_Courses.Stu_ID= Student.Stu_ID
         INNER JOIN Transportation ON Transportation.Stu_ID= Student.Stu_ID
         INNER JOIN Transportation_Preference  ON Transportation_Preference.Stu_ID= Student.Stu_ID</string>
-
+    <string name="query_select">Query Select \n Select Any Field From Dropdown \n Press Donut To Search!</string>
 
 
 </resources>
